after 5 rounds, the game declares a winner. Lastly need to add a reset button.

--- a/styles.css
+++ b/styles.css
@@ -156,9 +156,17 @@ table {
     margin-top: 2%;
     margin-right: auto;
     margin-left: auto; 
+    flex-direction: column;
+
 }
 
 #score-text {
     margin: auto;
     font-size: 25px;
+}
+
+#round-tracker {
+    margin: auto;
+    font-size: 25px;
+    margin-top: 2%;
 }
