--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,27 @@ p {
     margin: 0;
     background-color: black;
     flex-direction: column;
-    visibility: hidden;
-    
+    /*visibility: hidden;*/    
 }
+
+/*fade in the main container */
+
+.revealMain {
+    opacity: 0;
+    animation: fadeIn;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+
+}
+
+@keyframes fadeIn{
+    to{
+        opacity: 1;
+    }
+}
+
+
 
 .intro-text {
     color: white;
